# app-memory-usage-fetcher

./: Cargo.toml  LICENSE  build.rs  readme.md
.github/workflows/: build.yml  lint.yml
src/: lib.rs  main.rs  os_function_calls.c
